# shardman

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sample.env  server
.github/workflows/: codeql-analysis.yml  docker-dev.yml  docker.yml  precommit.yml
shardman/: __init__.py  config.py  models.py  requests.py  responses.py  sockets.py  state.py
